--- a/ToDo/Base.lproj/Main.storyboard
+++ b/ToDo/Base.lproj/Main.storyboard
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item List View Controller-->
+        <!--Item ListVC-->
         <scene sceneID="YWl-jC-QaF">
             <objects>
-                <viewController storyboardIdentifier="ItemListViewController" id="NKn-Tb-GYM" customClass="ItemListViewController" customModule="ToDo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemListVC" id="NKn-Tb-GYM" customClass="ItemListVC" customModule="ToDo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="L0o-pv-BEC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,7 +25,43 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NTh-SK-irK" id="HjD-CG-BAQ">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MNh-7I-7Pg">
+                                                    <rect key="frame" x="28" y="11.5" width="80" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jP7-ce-f3I">
+                                                    <rect key="frame" x="294" y="11.5" width="112" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EaW-OK-7mH">
+                                                    <rect key="frame" x="140" y="11.5" width="82" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="jP7-ce-f3I" secondAttribute="trailing" constant="8" id="2ZR-gP-IvI"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="MNh-7I-7Pg" secondAttribute="trailing" constant="20" symbolic="YES" id="PTA-VR-fJS"/>
+                                                <constraint firstItem="jP7-ce-f3I" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="EaW-OK-7mH" secondAttribute="trailing" constant="8" symbolic="YES" id="T8T-vv-8PD"/>
+                                                <constraint firstItem="MNh-7I-7Pg" firstAttribute="leading" secondItem="HjD-CG-BAQ" secondAttribute="leadingMargin" constant="8" id="TIA-pi-cCe"/>
+                                                <constraint firstItem="jP7-ce-f3I" firstAttribute="centerY" secondItem="HjD-CG-BAQ" secondAttribute="centerY" id="Wcx-bP-cF2"/>
+                                                <constraint firstItem="MNh-7I-7Pg" firstAttribute="centerY" secondItem="HjD-CG-BAQ" secondAttribute="centerY" id="knX-8o-uQN"/>
+                                                <constraint firstItem="EaW-OK-7mH" firstAttribute="centerY" secondItem="HjD-CG-BAQ" secondAttribute="centerY" id="qfV-6P-fc5"/>
+                                                <constraint firstItem="EaW-OK-7mH" firstAttribute="leading" secondItem="MNh-7I-7Pg" secondAttribute="trailing" constant="32" id="rFh-te-xde"/>
+                                                <constraint firstItem="jP7-ce-f3I" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MNh-7I-7Pg" secondAttribute="trailing" constant="8" symbolic="YES" id="wBi-QA-3xc"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="EaW-OK-7mH" id="SZl-L2-Bk8"/>
+                                            <outlet property="locationLabel" destination="jP7-ce-f3I" id="Hku-HK-IBM"/>
+                                            <outlet property="titleLabel" destination="MNh-7I-7Pg" id="3SS-QL-ERn"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -45,7 +81,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j9u-LJ-dK3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <customObject id="hKv-Lx-O1H" customClass="ItemListDataProvider" customModule="ToDo" customModuleProvider="target"/>
+                <customObject id="hKv-Lx-O1H" customClass="ItemListDataSource" customModule="ToDo" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="134.78260869565219" y="77.678571428571431"/>
         </scene>
